# veldpy

./: LICENSE  README.rst  mypy.ini  pyproject.toml
examples/: minimal.py  pure_socketio.py
tests/: test_models.py  test_veldpy.py
veldpy/: __init__.py  client.py  events.py  http.py  models.py
