[tool.poetry]
name = "veldpy"
version = "0.1.0"
description = "Async client for veldchat (https://chat.veld.dev)"
authors = ["Jens Reidel <adrian@travitia.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = "^4.6.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
