[tool.poetry]
name = "veldpy"
version = "0.1.0"
description = "Async client for veldchat (https://chat.veld.dev)"
license = "BSD-3-Clause"
authors = ["Jens Reidel <adrian@travitia.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = "^4.6.0"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
line_length = 88
lines_between_types = 1

[tool.flake8]
extend-ignore = "E501,E203,E731,E231"
max-line-length = 88
per_file_ignores = ["veldpy/__init__.py:F401"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
